--- a/src/main/resources/bot.conf
+++ b/src/main/resources/bot.conf
@@ -4,6 +4,7 @@ bot{
   user-timeout = 10
   bdc-key = "bdc_caddd851a5cf48e29f5861c2ea05b195"
   token = ""
+  default-timezone = 3
 }
 gpt{
   gpt-request-timeout = 7
